Workaround to fix evaluator Looks like javascript: Links doesn't work anymore inside chrome://… Also force stringify to display "undefined" instead of ""

--- a/chrome/content/console2/blank.html
+++ b/chrome/content/console2/blank.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><title></title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
+<body>
+<script type="text/javascript">
+document.body.textContent = ""; // Remove itself from results
+if(location.hash)
+	document.body.textContent = "" + eval(decodeURIComponent(location.hash.substr(1)));
+</script>
+</body>
+</html>
